--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -26,66 +26,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Quincy</h2>
+        <h2 class="card-title">djdbj</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:mohan20@gmail.com">mohan20@gmail.com</a></li>
-            <li class="list-group-item">Office number: 111</li>
+            <li class="list-group-item">Email: <a href="mailto:dsjhk@gmail.com">dsjhk@gmail.com</a></li>
+            <li class="list-group-item">Office number: 2</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Ram Sah</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:mohan20@gmail.com">mohan20@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/ram-sah" target="_blank" rel="noopener noreferrer">ram-sah</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Dave</h2>
+        <h2 class="card-title">hgg</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:mohan20@gmail.com">mohan20@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/mohan" target="_blank" rel="noopener noreferrer">mohan</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Peter</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:mohan20@gmail.com">mohan20@gmail.com</a></li>
-            <li class="list-group-item">School: Penn State</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Mohan</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:mohan20@gmail.com">mohan20@gmail.com</a></li>
-            <li class="list-group-item">School: Chestr </li>
+            <li class="list-group-item">Email: <a href="mailto:dfgdfg@jhdjhg.com">dfgdfg@jhdjhg.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/gdfg" target="_blank" rel="noopener noreferrer">gdfg</a></li>
         </ul>
     </div>
 </div>
